--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,34 +1,6 @@
 .home {
     height: 100%;
 }
-.top {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background: none;
-    z-index: 999;
-    font-size: 40rpx;
-    text-align: center;
-    background: #fff;
-}
-.top .avatar {
-    position: absolute;
-    left: 20rpx;
-    top: 0;
-    width: 60rpx;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.top .avatar image {
-    width: 100%;
-    height: 60rpx;
-    border-radius: 100%;
-}
-.top .title {
-   font-size: 34rpx;
-}
 
 .location {
     height: 40rpx;
@@ -109,6 +81,9 @@
     width: 40rpx;
     height: 40rpx;
     vertical-align: top;
+}
+.less {
+    filter: grayscale(100%);
 }
 
 
