--- a/pages/mall/mall.wxss
+++ b/pages/mall/mall.wxss
@@ -2,34 +2,6 @@
 .mall {
     height: 100%;
 }
-.top {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 750rpx;
-    background: none;
-    z-index: 999;
-    font-size: 40rpx;
-    text-align: center;
-    background: #fff;
-}
-.top .avatar {
-    position: absolute;
-    left: 15rpx;
-    top: 0;
-    width: 60rpx;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.top .avatar image {
-    width: 100%;
-    height: 60rpx;
-    border-radius: 100%;
-}
-.top .title {
-   font-size: 34rpx;
-}
 
 .item {
     display: flex;
@@ -78,13 +50,14 @@
 }
 .less, .add {
     display: inline-block;
-    width: 25%;
-    height: 70rpx;
+    width: 40rpx;
+    height: 40rpx;
+    margin-top: 15rpx;
     vertical-align: top;
 }
 .price-inp {
     display: inline-block;
-    width: 30%;
+    width: 50%;
     height: 70rpx;
     vertical-align: top;
 }
@@ -103,16 +76,4 @@
     font-weight: 500;
     line-height: 50rpx;
     color: #535360;
-}
-
-.home {
-    position: fixed;
-    right: 40rpx;
-    bottom: 100rpx;
-    width: 70rpx;
-    height: 70rpx;
-}
-.home image {
-    width: 100%;
-    height: 100%;
 }
