--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,10 +1,12 @@
 <view class="container">
     <view class="order">
-        <view class="top" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; ">
-            <view class="avatar" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; "><image src="/assets/img/avatar.jpg" mode="aspectFit"></image></view>
-            <view class="title">社区订单</view>
+        <navigationBar id="navigationBar" title="{{title}}" color="{{color}}" back="{{back}}"></navigationBar>
+        <view class="tab">
+            <text class="tab-item all active">全部订单</text>
+            <text class="tab-item await">待付款</text>
+            <text class="tab-item paid">已付款</text>
         </view>
-        <scroll-view class="list" scroll-y style="height:{{calcData.mainH}}px">
+        <scroll-view class="list" scroll-y style="height:{{mainH}}px">
             <view class="list-main">
                 <view class="item">
                     <view class="item-header">
@@ -14,13 +16,18 @@
                     <view class="item-main">
                         <image class="img" src="/assets/img/avatar.jpg" mode="aspectFit"></image>
                         <view class="item-info">
-                            <view class="item-title">墨西哥巨无霸牛油果</view>
-                            <view class="item-desc">x1</view>
+                            <view class="item-title">陆家村有机稻花香米</view>
+                            <view class="item-desc">5kg 9年的有机坚持 只为真实好米</view>
+                        </view>
+                        <view class="item-price">
+                            <view class="price">￥168</view>
+                            <view class="add">x1</view>
                         </view>
                     </view>
+                    <view class="item-amount">共1件商品 实付：<text class="red">￥168</text></view>
                     <view class="item-footer">
-                        <view class="item-amount">合计：<text class="red">￥168</text></view>
-                        <view class="item-status">订单状态： <text class="red">未取货</text></view>
+                        <text class="item-btn cancel">取消订单</text>
+                        <text class="item-btn pay">未支付</text>
                     </view>
                 </view>
                 <view class="item">
@@ -31,13 +38,28 @@
                     <view class="item-main">
                         <image class="img" src="/assets/img/avatar.jpg" mode="aspectFit"></image>
                         <view class="item-info">
-                            <view class="item-title">墨西哥巨无霸牛油果</view>
-                            <view class="item-desc">x1</view>
+                            <view class="item-title">陆家村有机稻花香米</view>
+                            <view class="item-desc">5kg 9年的有机坚持 只为真实好米</view>
+                        </view>
+                        <view class="item-price">
+                            <view class="price">￥168</view>
+                            <view class="add">x1</view>
                         </view>
                     </view>
+                    <view class="item-main">
+                        <image class="img" src="/assets/img/avatar.jpg" mode="aspectFit"></image>
+                        <view class="item-info">
+                            <view class="item-title">陆家村有机稻花香米</view>
+                            <view class="item-desc">5kg 9年的有机坚持 只为真实好米</view>
+                        </view>
+                        <view class="item-price">
+                            <view class="price">￥168</view>
+                            <view class="add">x1</view>
+                        </view>
+                    </view>
+                    <view class="item-amount">共2件商品 实付：<text class="red">￥168</text></view>
                     <view class="item-footer">
-                        <view class="item-amount">合计：<text class="red">￥168</text></view>
-                        <view class="item-status">订单状态： <text class="red">未取货</text></view>
+                        <text class="item-btn go">已支付</text>
                     </view>
                 </view>
                 <view class="item">
@@ -48,13 +70,18 @@
                     <view class="item-main">
                         <image class="img" src="/assets/img/avatar.jpg" mode="aspectFit"></image>
                         <view class="item-info">
-                            <view class="item-title">墨西哥巨无霸牛油果</view>
-                            <view class="item-desc">x1</view>
+                            <view class="item-title">陆家村有机稻花香米</view>
+                            <view class="item-desc">5kg 9年的有机坚持 只为真实好米</view>
+                        </view>
+                        <view class="item-price">
+                            <view class="price">￥168</view>
+                            <view class="add">x1</view>
                         </view>
                     </view>
+                    <view class="item-amount">共1件商品 实付：<text class="red">￥168</text></view>
                     <view class="item-footer">
-                        <view class="item-amount">合计：<text class="red">￥168</text></view>
-                        <view class="item-status">订单状态： <text class="red">未取货</text></view>
+                        <text class="item-btn cancel">取消订单</text>
+                        <text class="item-btn pay">去支付</text>
                     </view>
                 </view>
             </view>
