--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -2,34 +2,6 @@
 .product {
     height: 100%;
 }
-.top {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 750rpx;
-    background: none;
-    z-index: 999;
-    font-size: 40rpx;
-    text-align: center;
-    background: #fff;
-}
-.top .avatar {
-    position: absolute;
-    left: 20rpx;
-    top: 0;
-    width: 60rpx;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.top .avatar image {
-    width: 100%;
-    height: 60rpx;
-    border-radius: 100%;
-}
-.top .title {
-   font-size: 34rpx;
-}
 
 .item {
     display: flex;
@@ -83,7 +55,7 @@
     font-size: 28rpx;
     border-radius: 25rpx;
     color: #fff;
-    background: #FFA957;
+    background: #ffa400;
 }
 
 .no-content {
