--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,121 +1,69 @@
 .index {
     height: 100%;
 }
-.top {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background: none;
-    z-index: 999;
-    font-size: 40rpx;
+
+.tips {
+    display: flex;
+    height: 80rpx;
+    line-height: 80rpx;
+    color: #fff;
+}
+.tips .txt {
+    width: 180rpx;
+    font-size: 32rpx;
     text-align: center;
-    background: #fff;
+    background: #ffa400;
 }
-.top .avatar {
-    position: absolute;
-    left: 20rpx;
-    top: 0;
-    width: 60rpx;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.tips .tips-main {
+    flex: 1;
+    padding: 0 20rpx;
+    font-size: 32rpx;
+    background: #999;
 }
-.top .avatar image {
+
+.slide {
     width: 100%;
-    height: 60rpx;
-    border-radius: 100%;
+    height: 320rpx;
 }
-.top .title {
-   font-size: 34rpx;
-}
-
-.carousel {
-    height: 40rpx;
-    line-height: 40rpx;
-    padding: 10rpx 20rpx;
-    margin: 10rpx 0;
-    background: #fff;
-}
-.carousel swiper-item {
-    height: 40rpx;
-    line-height: 40rpx;
-    font-size: 24rpx;
+.slide image {
+    width: 100%;
+    height: 100%;
 }
 
+.list-main {
+    padding: 0 20rpx;
+}
 .item {
-    display: flex;
-    height: 160rpx;
-    padding: 20rpx;
     background: #fff;
 }
 .item .pic {
-    width: 160rpx;
-    height: 160rpx;
-}
-.item .item-info {
-    position: relative;
-    flex: 1;
-    padding-left: 20rpx;
+    width: 100%;
+    height: 380rpx;
 }
 .item .item-title {
-    display: -webkit-box;
-    width: 100%;
-    height: 32rpx;
-    font-size: 28rpx;
-    line-height: 32rpx;
-    margin: 0 0 10rpx;
-    text-align: left;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-.item .item-desc {
-    font-size: 24rpx;
-    color: #bbb;
-}
-.item-format {
-    font-size: 24rpx;
-    color: #bbb;
-}
-.item-main {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    width: calc(100% - 20rpx);
-    height: 40rpx;
-}
-.item-price {
-    height:40rpx;
-    color: #FF6757;
-    font-size: 24rpx;
-}
-.item-price text {
     font-size: 36rpx;
 }
-.item .price-num {
-    flex: 1;
-    height: 40rpx;
-    line-height: 40rpx;
-    padding: 0 15rpx;
-    text-align: right;
+.item-desc {
+    font-size: 28rpx;
+    color:#7d7d7d;
 }
-.amount {
-    display: inline-block;
-    width: 80rpx;
-    height: 40rpx;
-    line-height: 40rpx;
-    text-align: center;
-    font-size: 32rpx;
-    vertical-align: top;
+.item-main {
+    display: flex;
 }
+
 .less, .add {
     display: inline-block;
     width: 40rpx;
     height: 40rpx;
+    margin-top: 15rpx;
     vertical-align: top;
 }
-
+.price-inp {
+    display: inline-block;
+    width: 50%;
+    height: 70rpx;
+    vertical-align: top;
+}
 
 .no-content {
     margin-top: 200rpx;
