--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,14 +17,13 @@
             <view class="list-main">
                 <view class="item">
                     <image class="pic" src="/assets/img/avatar.jpg"></image>
-                    <view class="item-title">泰国进口红毛丹</view>
-                    <view class="item-desc">这是一段介绍</view>
                     <view class="item-main">
-                        <view class="item-price">￥<text>123</text></view>
-                        <view class="price-num">
-                            <image src="/assets/img/less.png" mode="aspectFit" class="less"></image>
-                            <text class="amount">1</text>
-                            <image src="/assets/img/add.png" mode="aspectFit" class="add"></image>
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-bottom">
+                            <view class="item-tips">内购价</view>
+                            <view class="item-price"><text class="current">￥23</text><text class="del">￥123</text></view>
+                            <image class="add" src="/assets/img/shop.png" mode="aspectFit"></image>
                         </view>
                     </view>
                 </view>
