--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,16 +5,64 @@
             <view class="txt">自提提示</view>
             <view class="tips-main">奔驰工厂北门</view>
         </view>
-        <swiper class="slide" indicator-dots autoplay circular>
-            <swiper-item class="slide-item">
-                <image src="/assets/img/avatar.jpg"></image>
-            </swiper-item>
-            <swiper-item class="slide-item">
-                <image src="/assets/img/empty.png"></image>
-            </swiper-item>
-        </swiper>
         <scroll-view class="list" scroll-y style="height:{{maxH}}px">
+            <swiper class="slide" indicator-dots autoplay circular>
+                <swiper-item class="slide-item">
+                    <image src="/assets/img/avatar.jpg"></image>
+                </swiper-item>
+                <swiper-item class="slide-item">
+                    <image src="/assets/img/empty.png"></image>
+                </swiper-item>
+            </swiper>
             <view class="list-main">
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-main">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-bottom">
+                            <view class="item-tips">内购价</view>
+                            <view class="item-price"><text class="current">￥23</text><text class="del">￥123</text></view>
+                            <image class="add" src="/assets/img/shop.png" mode="aspectFit"></image>
+                        </view>
+                    </view>
+                </view>
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-main">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-bottom">
+                            <view class="item-tips">内购价</view>
+                            <view class="item-price"><text class="current">￥23</text><text class="del">￥123</text></view>
+                            <image class="add" src="/assets/img/shop.png" mode="aspectFit"></image>
+                        </view>
+                    </view>
+                </view>
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-main">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-bottom">
+                            <view class="item-tips">内购价</view>
+                            <view class="item-price"><text class="current">￥23</text><text class="del">￥123</text></view>
+                            <image class="add" src="/assets/img/shop.png" mode="aspectFit"></image>
+                        </view>
+                    </view>
+                </view>
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-main">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-bottom">
+                            <view class="item-tips">内购价</view>
+                            <view class="item-price"><text class="current">￥23</text><text class="del">￥123</text></view>
+                            <image class="add" src="/assets/img/shop.png" mode="aspectFit"></image>
+                        </view>
+                    </view>
+                </view>
                 <view class="item">
                     <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-main">
