--- a/pages/orderInfo/orderInfo.wxml
+++ b/pages/orderInfo/orderInfo.wxml
@@ -20,11 +20,58 @@
                     <image src="/assets/img/avatar.jpg"></image>
                     <text>2</text>
                 </view>
+                <view class="goods-item">
+                    <image src="/assets/img/avatar.jpg"></image>
+                    <text>2</text>
+                </view>
                 <view class="goods-arrow">
-                    <text>共7件</text>
+                    共7件
                     <image class="addr-arrow" src="/assets/img/back.png"></image>
                 </view>
             </view>
+            <view class="base-info">
+                <view class="base-box">
+                    <view class="base-title">支付方式</view>
+                    <view class="base-des">微信支付</view>
+                </view>
+                <view class="base-box">
+                    <view class="base-title">配送方式</view>
+                    <view class="base-des">自提</view>
+                </view>
+                <view class="base-box">
+                    <view class="base-title">提货地址</view>
+                    <view class="base-des">北京市朝阳区螺丝孔带饭了斯柯达解放</view>
+                </view>
+            </view>
+            <view class="price-panel">
+                <view class="base-box">
+                    <view class="base-title">商品总价</view>
+                    <view class="base-des">￥172</view>
+                </view>
+                <view class="base-box">
+                    <view class="base-title">优惠券</view>
+                    <view class="base-des">
+                        <!-- <text class="noffer">0张优惠券</text> -->
+                        <text class="offer red">-￥15</text>
+                    </view>
+                    <image class="base-arrow" src="/assets/img/back.png"></image>
+                </view>
+                <view class="base-box">
+                    <view class="base-title">红包</view>
+                    <view class="base-des">
+                        <text class="noffer">0个可用红包</text>
+                        <!-- <text class="offer red">-￥15</text> -->
+                    </view>
+                    <image class="base-arrow" src="/assets/img/back.png"></image>
+                </view>
+                <view class="price-total">
+                    合计：<text class="red">￥1456</text>
+                </view>
+            </view>
         </scroll-view>
+        <view class="footer">
+            <view class="total red">付款:￥<text>1547</text></view>
+            <view class="sub">提交订单</view>
+        </view>
     </view>
 </view>
