--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -1,20 +1,88 @@
 .delivery {
+    display: flex;
+    padding: 40rpx;
     border-radius: 40rpx 40rpx 0 0;
     color: #fff;
-    background: #FF6757;
+    background: -webkit-linear-gradient(60deg, #FF7D09 0%,#FDCA57 100%);
+}
+.status {
+    flex: 1;
+}
+.status text {
+    display: inline-block;
+    padding: 20rpx 40rpx;
 }
 .delivery image {
-    width: 140rpx;
+    width: 100rpx;
     height: 100rpx;
+    margin-right: 60rpx;
 }
 
+.status-list {
+    background: #fff;
+}
+.status-list .status-item {
+    display: flex;
+    margin: 0 20rpx;
+    border-bottom: 2rpx solid #F5F5F5;
+}
+.status-icon {
+    width: 60rpx;
+    height: 60rpx;
+    margin: 30rpx 10rpx 0;
+}
+.status-info {
+    flex: 1;
+    padding: 20rpx 0;
+}
+.status-des {
+    font-size: 28rpx;
+    line-height: 40rpx;
+}
+.status-date {
+    font-size: 24rpx;
+    line-height: 40rpx;
+    color:#999;
+}
+
+.address {
+    display: flex;
+    padding: 20rpx 40rpx;
+    background: #fff;
+}
+.address .addr-icon {
+    width: 40rpx;
+    height: 40rpx;
+    margin-top: 20rpx;
+}
+.address .addr-info {
+    flex: 1;
+    padding: 0 20rpx;
+    font-size: 0rpx;
+}
+.addr-des {
+    padding-top: 10rpx;
+    line-height: 30rpx;
+    font-size: 24rpx;
+}
+.address .addr-name .name {
+    display: inline-block;
+    font-size: 28rpx;
+    line-height: 40rpx;
+}
+.address .addr-name .tel {
+    display: inline-block;
+    padding-left: 20rpx;
+    line-height: 40rpx;
+    font-size: 28rpx;
+    color: #999;
+}
 
 .goods {
     display: flex;
-    padding:30rpx 20rpx;
-    margin:20rpx;
+    padding: 30rpx 20rpx;
+    margin: 20rpx 0;
     font-size: 0;
-    border-radius:20rpx;
     background:#fff;
 }
 .goods-item {
