--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,1 +1,149 @@
 /* pages/detail/detail.wxss */
+.detail {
+    
+}
+
+.slide {
+    width: 100%;
+    height: 700rpx;
+}
+.slide-img {
+    width: 100%;
+    height: 100%;
+}
+.info {
+    padding: 20rpx;
+    font-size: 0;
+    background: #fff;
+}
+.info .title {
+    font-size: 38rpx;
+    padding-bottom: 20rpx;
+}
+.info .desc {
+    font-size: 28rpx;
+    padding-bottom: 20rpx;
+    color: #999;
+}
+.price {
+    display: flex;
+    padding-bottom: 20rpx;
+}
+.stint {
+    font-size: 24rpx;
+    padding: 2rpx 10rpx;
+    border: 2rpx solid #FF5e46;
+    margin-top: -4rpx;
+    color: #FF5e46;
+    border-radius: 6rpx;
+    transform: scale(.8);
+    vertical-align: top;
+}
+.real {
+    font-size: 36rpx;
+    line-height: 40rpx;
+    color: #FF5e46;
+}
+.original {
+    padding: 0 10rpx;
+    font-size: 24rpx;
+    line-height: 40rpx;
+    text-decoration: line-through;
+    color: #999;
+}
+.sale {
+    flex: 1;
+    font-size: 28rpx;
+    line-height: 40rpx;
+    text-align: right;
+    color: #666;
+}
+.sale text {
+    color: #FF5e46;
+}
+.brief {
+    font-size:28rpx;
+    padding: 20rpx 0;
+    border-top: 2rpx solid #f7f7f7;
+    color:#999;
+}
+.bottom {
+    display: flex;
+    font-size:28rpx;
+    padding-top: 20rpx;
+    border-top: 2rpx solid #f7f7f7;
+    color:#999;
+}
+.bottom .bottom-item { 
+    display: inline-block;
+    padding-right: 20rpx;
+}
+.bottom-item::before {
+    display: inline-block;
+    content: "";
+    width: 10rpx;
+    height: 10rpx;
+    margin: 16rpx 10rpx 0 0;
+    background: #666;
+    border-radius: 100%;
+    vertical-align: top;
+}
+.bottom-item text {
+    display: inline-block;
+    color: #FF5e46;
+}
+
+.footer {
+    display: flex;
+    height: 100rpx;
+    
+    font-size: 0;
+    background: #fff;
+}
+.cart, .collect {
+    position: relative;
+    flex: 1.2;
+    text-align: center;
+    font-size: 0;
+}
+.collect {
+    border-right: 2rpx solid #f7f7f7;
+}
+.cart image, .collect image {
+    width: 40rpx;
+    height: 40rpx;
+    padding: 10rpx 0 4rpx;
+    opacity: .6;
+}
+.cart .txt, .collect .txt {
+    font-size: 24rpx;
+    color: #666;
+}
+.cart .num {
+    position: absolute;
+    top: 0;
+    display: inline-block;
+    line-height: 24rpx;
+    padding: 6rpx 10rpx 4rpx;
+    font-size: 24rpx;
+    border-radius: 24rpx;
+    text-align: center;
+    color: #fff;
+    background: #FF6757;
+}
+.add {
+    flex: 1.5;
+    text-align: center;
+    font-size: 30rpx;
+    line-height: 100rpx;
+    color: #fff;
+    background: #FDCA57;
+}
+.go {
+    flex: 1.5;
+    text-align: center;
+    font-size: 30rpx;
+    line-height: 100rpx;
+    color: #fff;
+    background: #FF6757;
+}
